--- a/massapp_frontend/pubspec.yaml
+++ b/massapp_frontend/pubspec.yaml
@@ -1,3 +1,22 @@
+name: massapp_frontend
+description: Aplikasi MassApp - Pembelajaran Pendidikan Jasmani berbasis proyek
+version: 1.0.0+1
+
+environment:
+  sdk: ">=3.2.0 <4.0.0"
+
 dependencies:
+  flutter:
+    sdk: flutter
   firebase_core: ^2.25.4
   firebase_auth: ^4.17.7
+  http: ^1.2.1
+  image_picker: ^1.0.7
+  url_launcher: ^6.2.6
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+
+flutter:
+  uses-material-design: true
