--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,10 +1,9 @@
 workflows:
   massapp_workflow:
-    name: Build MassApp APK (Auto Generate Android Folder)
+    name: Build MassApp APK
     environment:
       flutter: stable
     scripts:
-      - flutter create .
       - flutter pub get
       - flutter build apk --release
     artifacts:
