--- a/massapp_frontend/android/app/src/main/AndroidManifest.xml
+++ b/massapp_frontend/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.massapp">
+    package="com.alchemista27.massapp">
     
     <application
         android:label="massapp"
