--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -7,14 +7,18 @@ workflows:
       vars:
         GOOGLE_SERVICES_JSON: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
     scripts:
-      # Step 1: Buat google-services.json
+      # Step 1: Pastikan google-services.json tersedia
       - mkdir -p android/app
       - echo "$GOOGLE_SERVICES_JSON" > android/app/google-services.json
 
-      # Step 2: Install dependencies
+      # Step 2: Clean cache untuk mencegah error dependency
+      - rm -rf .dart_tool
+      - flutter pub cache repair
+
+      # Step 3: Install dependencies
       - flutter pub get
 
-      # Step 3: Build APK Release
+      # Step 4: Build APK Release
       - flutter build apk --release
 
     artifacts:
@@ -25,4 +29,4 @@ workflows:
     publishing:
       email:
         recipients:
-          - massapp.devepment@gmail.com
+          - septian.j@gmail.com
